--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "index.js",
 	"scripts": {
 		"build": "webpack",
-		"build-watch": "webpack -w"
+		"build-watch": "webpack -w",
+		"serve": "webpack serve"
 	},
 	"repository": {
 		"type": "git",
@@ -20,6 +21,7 @@
 	"homepage": "https://github.com/ElizabethWoodhouse/portfolio#readme",
 	"devDependencies": {
 		"webpack": "^5.40.0",
-		"webpack-cli": "^4.7.2"
+		"webpack-cli": "^4.7.2",
+		"webpack-dev-server": "^3.11.2"
 	}
 }
